Genereated projects and added specs in projects
