# auth/src/main/resources/api-spec.yaml
@@ -1,16 +1,13 @@
 openapi: 3.0.0
 info:
-  title: AUTH-AMT-Project-Two
   description: This is the API for auth purposes
+  version: "1.0.0-oas3"
+  title: AUTH-AMT-Project-Two
   contact:
     email: mickael.bonjour@heig-vd.ch
   license:
     name: Apache 2.0
-    url: http://www.apache.org/licenses/LICENSE-2.0.html
-  version: 1.0.0-oas3
-servers:
-  - url: https://localhost/api/auth/
-  - url: http://localhost/api/auth/
+    url: 'http://www.apache.org/licenses/LICENSE-2.0.html'
 tags:
   - name: unauth
     description: Operations open to all
@@ -18,51 +15,126 @@ tags:
     description: Operations available to regular users
   - name: admins
     description: Secured Admin-only calls
+
+components:
+  schemas:
+    UserMinimal:
+      type: object
+      required:
+        - email
+      properties:
+        email:
+          type: string
+          example: mickael.bonjour@heig-vd.ch
+    User:
+      allOf:
+        - $ref: '#/components/schemas/UserMinimal'
+        - type: object
+          required:
+            - firstname
+            - lastname
+          properties:
+            firstname:
+              type: string
+              example: Mickael
+            lastname:
+              type: string
+              example: Bonjour
+    UserLogin:
+      allOf:
+        - $ref: '#/components/schemas/UserMinimal'
+        - type: object
+          required:
+            - password
+          properties:
+            password:
+              type: string
+              example: testPass
+    UserFull:
+      allOf:
+        - $ref: '#/components/schemas/User'
+        - $ref: '#/components/schemas/UserLogin'
+    PasswordChange:
+      type: object
+      required:
+        - lastPass
+        - newPass
+        - repeatPass
+      properties:
+        lastPass:
+          type: string
+          example: password
+        newPass:
+          type: string
+          example: password1
+        repeatPass:
+          type: string
+          example: password1
+  responses:
+    UnauthorizedError:
+      description: Access token is missing or invalid
+    ForbiddenError:
+      description: You are not authorized to see this ressource
+
+  securitySchemes:
+    bearerAuth:            # arbitrary name for the security scheme
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
+
 paths:
   /login:
     post:
       tags:
         - unauth
       summary: Login to app
-      description: |
-        By passing in the appropriate options, you can log in to the auth endpoint
       operationId: login
+      description: >
+        By passing in the appropriate options, you can log in to the auth
+        endpoint
+      responses:
+        '200':
+          description: confirmation of log in and JWT auth token
       requestBody:
-        description: User who log in
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
-      responses:
-        "200":
-          description: confirmation of log in and JWT auth token
-  /user:
+              $ref: '#/components/schemas/UserLogin'
+        description: User who log in
+  /users:
     put:
+      security:
+        - bearerAuth: []
       tags:
         - users
       summary: Change user pasword
-      description: |
-        By passing the appropriate options and being authenticated, you can change your password here
       operationId: changePassword
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/PasswordChange'
+      description: >
+        By passing the appropriate options and being authenticated, you can change your password
+        here
       responses:
-        "200":
+        '200':
           description: Password changed
-        "401":
-          description: Access token is missing or invalid
-        "403":
-          description: You are not authorized to see this ressource
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '403':
+          $ref: '#/components/responses/ForbiddenError'
+    get:
       security:
         - bearerAuth: []
-  /users:
-    get:
       tags:
         - users
-      summary: Get all users, not showing roles or mails
-      description: |
-        Getting all firstnames and names of the users
+      summary: Get all users
       operationId: showUsers
+      description: >
+        Getting all firstnames and names of the users
       responses:
-        "200":
+        '200':
           description: Users showed to the user who demands it
           content:
             aplication/json:
@@ -70,99 +142,68 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/User'
-        "401":
-          description: Access token is missing or invalid
-        "403":
-          description: You are not authorized to see this ressource
-      security:
-        - bearerAuth: []
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '403':
+          $ref: '#/components/responses/ForbiddenError'
+
   /users/{userID}:
     put:
+      security:
+        - bearerAuth: []
       tags:
         - admins
       summary: Change the password of specified user
       parameters:
-        - name: userID
-          in: path
-          description: Email of the user
-          required: true
-          style: simple
-          explode: false
+        - in: path
+          name: userID
           schema:
             type: string
+          required: true
+          description: Email of the user
       responses:
-        "200":
+        '200':
           description: Password changed
-        "401":
-          description: Access token is missing or invalid
-        "403":
-          description: You are not authorized to see this ressource
-      security:
-        - bearerAuth: []
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '403':
+          $ref: '#/components/responses/ForbiddenError'
+
   /register:
     post:
+      security:
+        - bearerAuth: []
       tags:
         - admins
+      summary: add a user
       requestBody:
-        description: User to register
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/User'
+              $ref: '#/components/schemas/UserFull'
       responses:
-        "200":
+        '200':
           description: User created
-        "401":
-          description: Access token is missing or invalid
-        "403":
-          description: You are not authorized to see this ressource
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '403':
+          $ref: '#/components/responses/ForbiddenError'
+
+  /logout:
+    get:
       security:
         - bearerAuth: []
-components:
-  schemas:
-    User:
-      required:
-        - email
-        - firstname
-        - lastname
-        - password
-      type: object
-      properties:
-        email:
-          type: string
-          example: mickael.bonjour@heig-vd.ch
-        firstname:
-          type: string
-          example: Mickael
-        lastname:
-          type: string
-          example: Bonjour
-        password:
-          type: string
-          example: testPass
-    ArrayOfPublicUser:
-      type: array
-      items:
-        $ref: '#/components/schemas/ArrayOfPublicUser_inner'
-    ArrayOfPublicUser_inner:
-      required:
-        - firstname
-        - lastname
-      type: object
-      properties:
-        firstname:
-          type: string
-          example: Mickael
-        lastname:
-          type: string
-          example: Bonjour
-  responses:
-    UnauthorizedError:
-      description: Access token is missing or invalid
-    ForbiddenError:
-      description: You are not authorized to see this ressource
-  securitySchemes:
-    bearerAuth:
-      type: http
-      scheme: bearer
-      bearerFormat: JWT
+      tags:
+        - users
+      summary: Revoke token and logout
+      responses:
+        '200':
+          description: User created
+        '401':
+          $ref: '#/components/responses/UnauthorizedError'
+        '403':
+          $ref: '#/components/responses/ForbiddenError'
+
+servers:
+  - url: 'https://localhost/api/auth/'
+  - url: 'http://localhost/api/auth/'
